# iam-validation

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
examples/: compare_timeseries_ref_data.py  create_formatted_output.py  find_invalid_names.py
examples/listings_for_ppt/: compare_timeseries_ref_data.py  create_formatted_output.py  find_invalid_names.py
src/iam_validation/: __init__.py  dims.py
src/iam_validation/criteria/: timeseries_criteria_core.py
src/iam_validation/nomenclature/: __init__.py  defs.py  mapping.py  validation.py
src/iam_validation/output/: __init__.py  timeseries.py
src/iam_validation/targets/: target_classes.py
