[project]
name = "iam-validation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = [
    # We need a custom branch of nomenclature-iamc until it is merged and published as a new version,
    # to avoid validation errors on region mappings with non-ASCII characters on Windows.
    "nomenclature-iamc @ git+https://github.com/ciceroOslo/nomenclature@fixes-for-iamcompact",
    "pyam-iamc>=2.2",
    "pathways-ensemble-analysis @ git+https://gitlab.com/climateanalytics/pathways-ensemble-analysis.git@v1.1.0",
    "xlsxwriter>=3.2.0",
	# Dependency required by p-e-a (but not listed among its requirements)
    "pandas-indexing>=0.5.2",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.28.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iam_validation"]
